# full-stack-dev

./: README.md  computer-specs.md  dev-core-101-industries-research.md  programming-languages-timeline.txt
back-end-101/: frameworks_overview.md
back-end-101/final_project/: README.md  main.py  pyproject.toml
back-end-101/lesson2/: pyproject.toml
back-end-101/lesson3/: main.py  pyproject.toml
back-end-101/lesson3/utils/: helpers.py  utils.py
back-end-101/my_backend_project/: app.py
back-end-102/final-project/: pyproject.toml
back-end-102/final-project/src/: main.py  models.py
back-end-102/task3/: pyproject.toml
back-end-102/task3/src/: main.py
back-end-103/: README.md
back-end-103/lessons/lesson-01-intro-to-sql/: coffee-boom.sql
dev-core/: calc.js
dev-core-101/: calc-plan.md  calc.py  industries-research.md
dev-core-102/final-project/: fisherman_save.json  main.py  pyproject.toml
dev-core-102/task1/: clean-code-practice.py
dev-core-103/final-project/: project-summary.txt
dev-core-104/my_proj/data/: info.txt
dev-ops-101/project/: README.md  backup_configs.sh  create_user.sh  install_nginx.sh  master_setup.sh  update_server.sh
dev-ops-101/task1/: devops-101-intro.txt
front-end/: about.html  achievements.html  blog.html
front-end-101/: contacts.html  index.html  projects.html
front-end-101/css/: style.css
front-end-102/: about.html  achievements.html  blog.html  contacts.html  index.html  projects.html
front-end-102/css/: style.css
front-end-102/js/: script.js
front-end/js/: script.js
mvp-project/: README.md
(+1 files in other folders)
