[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["w4xxwrld <sahmusabekov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
uvicorn = "^0.32.1"
fastapi = "^0.115.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
