[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["w4xxwrld <sahmusabekov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
bcrypt = "^4.2.1"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
